# cff-most

./: Makefile  README.md  pyproject.toml
src/cff_most/: __init__.py  cff.py  cli.py
tests/: test_decode.py
tests/data/: About_Reset.cff  Most_docs.cff
