[project]
name = "cff_most"
description = "Tools for loading CFF MOST format used on the Amiga in 1988/1989"
version = "0.1.1"
authors = [
    { name = "Gareth Davidson", email = "gaz@bitplane.net" }
]
readme = "README.md"
license = "WTFPL"
requires-python = ">=3.10"

dependencies = []

[project.scripts]
cff-most = "cff_most.cli:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "coverage",
    "pytest-cov",
    "build",
    "twine",
    "ruff",
    "mkdocs",
    "mkdocs-material",
    "pydoc-markdown"
]

[project.urls]
Homepage = "https://bitplane.net/dev/python/cff-most"
Repository = "https://github.com/bitplane/cff-most"
Issues = "https://github.com/bitplane/cff-most/issues"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
